@startuml
hide circle
skinparam linetype ortho

entity "Usuario" as Usuario {
  * idUsuario : int <<PK>>
  --
  nombre : varchar
  correo : varchar
  contrasena : varchar
  fechaRegistro : timestamp
  estado : varchar
}

entity "Rol" as Rol {
  * idRol : int <<PK>>
  --
  nombre : varchar
}

entity "UsuarioRol" as UsuarioRol {
  * idUsuarioRol : int <<PK>>
  --
  idUsuario : int <<FK>>
  idRol : int <<FK>>
}

entity "Concurso" as Concurso {
  * idConcurso : int <<PK>>
  --
  nombre : varchar
  descripcion : text
  fechaInicio : timestamp
  duracionMinutos : int
  contrasena : varchar nullable
  urlSetProblemas : varchar
  minutosCongelamiento : int
  codigo : varchar
  estado : varchar
  idUsuarioCreador : int <<FK>>
}

entity "ParticipanteConcurso" as ParticipanteConcurso {
  * idParticipanteConcurso : int <<PK>>
  --
  fechaIngreso : timestamp
  estado : varchar
  idUsuario : int <<FK>>
  idConcurso : int <<FK>>
}

entity "Problema" as Problema {
  * idProblema : int <<PK>>
  --
  inciso : char
  titulo : varchar
  tiempo : float
  memoria : int
  colorGlobo : varchar
  estado : varchar
  idConcurso : int <<FK>>
}

entity "CasoPrueba" as CasoPrueba {
  * idCasoPrueba : int <<PK>>
  --
  entrada : text
  salida : text
  estado : varchar
  idProblema : int <<FK>>
}

entity "Lenguaje" as Lenguaje {
  * idLenguaje : int <<PK>>
  --
  idJudge0 : int
  nombre : varchar
  extension : varchar
  estado : varchar
}

entity "Envio" as Envio {
  * idEnvio : int <<PK>>
  --
  codigo : text
  resultado : varchar
  tiempo : float
  memoria : int
  token : varchar
  upsolving : varchar
  fechaEnvio : timestamp
  idUsuario : int <<FK>>
  idProblema : int <<FK>>
  idLenguaje : int <<FK>>
}


Usuario ||--o{ UsuarioRol
Rol ||--o{ UsuarioRol

Usuario ||--o{ Concurso : crea
Usuario ||--o{ ParticipanteConcurso
Concurso ||--o{ ParticipanteConcurso

Concurso ||--|{ Problema
Problema ||--|{ CasoPrueba

Usuario ||--o{ Envio
Problema ||--o{ Envio
Lenguaje ||--o{ Envio

@enduml